--- a/proyecto-gestion-cine/src/pages/home-page.component/home-page.component.html
+++ b/proyecto-gestion-cine/src/pages/home-page.component/home-page.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <main class="flex-fill">
   <header class="bg-dark text-white text-center py-5">
     <div class="container">
@@ -48,3 +50,5 @@
     </div>
   </section>
 </main>
+
+<app-footer></app-footer>
