--- a/proyecto-gestion-cine/src/components/navbar.component/navbar.component.html
+++ b/proyecto-gestion-cine/src/components/navbar.component/navbar.component.html
@@ -20,28 +20,34 @@
           <a class="nav-link" routerLink="/">Inicio</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/companies">Compañías</a>
-        </li>
-
         <!-- Solo visible si el usuario ha iniciado sesión -->
-        <li class="nav-item" *ngIf="isLoggedIn">
-          <a class="nav-link" routerLink="/movies">Películas</a>
-        </li>
 
+        @if(isLoggedIn){
         <li class="nav-item">
-          <a class="nav-link" routerLink="/promotions">Promociones</a>
+          <a class="nav-link" routerLink="/companies">Cines</a>
         </li>
+        } @if(isLoggedIn){
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/movies">Recargar Cartera</a>
+        </li>
+        } @if(isLoggedIn){
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/promotions">Ver Perfil</a>
+        </li>
+        }
 
         <!-- Mostrar "Iniciar sesión" si el usuario es invitado -->
-        <li class="nav-item ms-lg-3" *ngIf="!isLoggedIn">
+        @if(!isLoggedIn){
+        <li class="nav-item ms-lg-3">
           <a class="btn btn-outline-light btn-sm" routerLink="/login" routerLinkActive="active">
             Iniciar Sesión
           </a>
         </li>
+        }
 
         <!-- Mostrar "Perfil / Cerrar sesión" si está logueado -->
-        <li class="nav-item dropdown ms-lg-3" *ngIf="isLoggedIn">
+        @if(isLoggedIn){
+        <li class="nav-item dropdown ms-lg-3">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -61,6 +67,7 @@
             </li>
           </ul>
         </li>
+        }
       </ul>
     </div>
   </div>
