--- a/proyecto-gestion-cine/src/components/pay-advertisement-form.component/pay-advertisement-form.component.scss
+++ b/proyecto-gestion-cine/src/components/pay-advertisement-form.component/pay-advertisement-form.component.scss
@@ -1,4 +1,4 @@
-.create-advertisement-form {
+.pay-advertisement-form {
   max-width: 900px;
   margin: 0 auto;
   background: #fff;
@@ -7,16 +7,16 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
-.create-advertisement-form .form-label {
+.pay-advertisement-form .form-label {
   font-weight: 600;
 }
 
-.create-advertisement-form .invalid-feedback {
+.pay-advertisement-form .invalid-feedback {
   display: block;
 }
 
 @media (max-width: 576px) {
-  .create-advertisement-form {
+  .pay-advertisement-form {
     padding: 1rem;
   }
 }
