--- a/proyecto-gestion-cine/src/components/login/login.component/login.component.html
+++ b/proyecto-gestion-cine/src/components/login/login.component/login.component.html
@@ -9,6 +9,23 @@
     </div>
 
     <form [formGroup]="loginForm" (submit)="submit()">
+      @if(errorMessage){
+      <div class="alert-error">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          fill="currentColor"
+          viewBox="0 0 16 16"
+        >
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+          <path
+            d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"
+          />
+        </svg>
+        {{ errorMessage }}
+      </div>
+      }
       <div class="form-group">
         <label for="usuario">
           <svg
@@ -68,7 +85,24 @@
         <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a>
       </div>
 
-      <button type="submit" class="btn-submit">
+      <button type="submit" class="btn-submit" [disabled]="isLoading || loginForm.invalid">
+        @if (isLoading) {
+        <span>Iniciando sesión...</span>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          fill="currentColor"
+          viewBox="0 0 16 16"
+          class="spinner"
+        >
+          <path
+            d="M8 0a8 8 0 1 0 8 8A8 8 0 0 0 8 0zM8 14a6 6 0 1 1 6-6 6 6 0 0 1-6 6z"
+            opacity=".3"
+          />
+          <path d="M8 2a6 6 0 0 0-6 6h2a4 4 0 0 1 4-4V2z" />
+        </svg>
+        } @else {
         <span>Iniciar Sesión</span>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -82,6 +116,7 @@
             d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
           />
         </svg>
+        }
       </button>
       <div class="divider"></div>
     </form>
