--- a/proyecto-gestion-cine/src/components/share/page-layout.component/page-layout.component.html
+++ b/proyecto-gestion-cine/src/components/share/page-layout.component/page-layout.component.html
@@ -4,7 +4,9 @@
   <div class="content flex-grow-1 container-fluid py-3">
     <div class="row">
       <div class="col-12 col-md-2 mb-3 mb-md-0 d-flex flex-column align-items-center">
+        @if(!isSysAdmin){
         <app-advertisement [position]="'left'"></app-advertisement>
+        }
       </div>
 
       <div class="col-12 col-md-8">
@@ -12,7 +14,9 @@
       </div>
 
       <div class="col-12 col-md-2 mt-3 mt-md-0 d-flex flex-column align-items-center">
+        @if(!isSysAdmin){
         <app-advertisement [position]="'right'"></app-advertisement>
+        }
       </div>
     </div>
   </div>
