Creando reportes para administrador de sistema v5

--- a/proyecto-gestion-cine/src/components/reports/advertisement-purchased-report.component/advertisement-purchased-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/advertisement-purchased-report.component/advertisement-purchased-report.component.html
@@ -66,7 +66,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let ad of report.purchasedAdvertisements">
+        @for( ad of report.purchasedAdvertisements; track ad.idAnuncio){
+        <tr>
           <td>{{ ad.idAnuncio }}</td>
           <td>{{ ad.idUsuario }}</td>
           <td>{{ ad.nombreAnuncio }}</td>
@@ -74,6 +75,7 @@
           <td>Q {{ ad.montoPago | number : '1.2-2' }}</td>
           <td>{{ ad.tipoAnuncio }}</td>
         </tr>
+        }
       </tbody>
     </table>
   </div>
