--- a/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
@@ -43,17 +43,10 @@
         </div>
       </div>
     </form>
-
-    @if (errorMessage) {
-    <div class="alert-error mt-3">
-      <i class="bi bi-exclamation-triangle"></i>
-      {{ errorMessage }}
-    </div>
-    }
   </div>
 
   @if (report) {
-  <!-- Resumen General -->
+
   <div class="section-card">
     <div class="section-header">
       <h2>
@@ -160,3 +153,9 @@
   </div>
   } }
 </div>
+<app-share-popup
+  [mensaje]="errorMessage || ''"
+  [tipo]="'error'"
+  [mostrar]="!!errorMessage"
+  (cerrarEvent)="errorMessage = null"
+></app-share-popup>
