--- a/proyecto-gestion-cine/src/components/reports/most-commented-room-report.component/most-commented-room-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/most-commented-room-report.component/most-commented-room-report.component.html
@@ -30,13 +30,6 @@
         </div>
       </div>
     </form>
-
-    @if (errorMessage) {
-    <div class="alert-error mt-3">
-      <i class="bi bi-exclamation-triangle"></i>
-      {{ errorMessage }}
-    </div>
-    }
   </div>
 
   @if (report) {
@@ -91,3 +84,9 @@
   </div>
   }
 </div>
+<app-share-popup
+  [mensaje]="errorMessage || ''"
+  [tipo]="'error'"
+  [mostrar]="!!errorMessage"
+  (cerrarEvent)="errorMessage = null"
+></app-share-popup>
