--- a/proyecto-gestion-cine/src/components/reports/most-popular-room-report.component/most-popular-room-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/most-popular-room-report.component/most-popular-room-report.component.html
@@ -32,13 +32,6 @@
         </div>
       </div>
     </form>
-
-    @if (errorMessage) {
-    <div class="alert-error mt-3">
-      <i class="bi bi-exclamation-triangle"></i>
-      {{ errorMessage }}
-    </div>
-    }
   </div>
 
   @if (report) {
@@ -96,3 +89,10 @@
   </div>
   }
 </div>
+
+<app-share-popup
+  [mensaje]="errorMessage || ''"
+  [tipo]="'error'"
+  [mostrar]="!!errorMessage"
+  (cerrarEvent)="errorMessage = null"
+></app-share-popup>
