Arreglo de reportes

--- a/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
@@ -153,9 +153,19 @@
   </div>
   } }
 </div>
+@if(errorMessage){
 <app-share-popup
   [mensaje]="errorMessage || ''"
   [tipo]="'error'"
   [mostrar]="!!errorMessage"
   (cerrarEvent)="errorMessage = null"
 ></app-share-popup>
+
+}@else if(infoMessage){
+<app-share-popup
+  [mensaje]="infoMessage || ''"
+  [tipo]="'success'"
+  [mostrar]="!!infoMessage"
+  (cerrarEvent)="infoMessage = null"
+></app-share-popup>
+}
