--- a/proyecto-gestion-cine/src/components/users/create-user.component/create-user.component.html
+++ b/proyecto-gestion-cine/src/components/users/create-user.component/create-user.component.html
@@ -1,8 +1,7 @@
 <form [formGroup]="nuevoRegistroUsuario" (submit)="submit()">
   <div class="row g-3">
     <div class="col-sm-6">
-      <label for="firstName" class="form-label">Nombre Completo</label>
-
+      <label for="nombre" class="form-label">Nombre Completo</label>
       <input
         type="text"
         class="form-control"
@@ -11,23 +10,11 @@
         autocomplete="off"
         placeholder="Tu Nombre"
         formControlName="nombre"
-        [class.is-invalid]="
-          nuevoRegistroUsuario.controls['nombre'].dirty &&
-          nuevoRegistroUsuario.controls['nombre'].invalid
-        "
       />
-
-      @if (nuevoRegistroUsuario.controls['nombre'].invalid &&
-      nuevoRegistroUsuario.controls['nombre'].touched) {
-      <div class="invalid-feedback">
-        <div>Ingrese un nombre valido</div>
-      </div>
-      }
     </div>
 
     <div class="col-sm-6">
       <label for="email" class="form-label">Correo Electrónico</label>
-
       <input
         type="email"
         class="form-control"
@@ -36,22 +23,11 @@
         autocomplete="off"
         placeholder="Tu Correo Electrónico"
         formControlName="email"
-        [class.is-invalid]="
-          nuevoRegistroUsuario.controls['email'].dirty &&
-          nuevoRegistroUsuario.controls['email'].invalid
-        "
       />
-
-      @if (nuevoRegistroUsuario.controls['email'].invalid &&
-      nuevoRegistroUsuario.controls['email'].touched) {
-      <div class="invalid-feedback">
-        <div>Ingrese un correo electrónico válido</div>
-      </div>
-      }
     </div>
+
     <div class="col-sm-6">
       <label for="usuario" class="form-label">Nombre de Usuario</label>
-
       <input
         type="text"
         class="form-control"
@@ -60,22 +36,11 @@
         autocomplete="off"
         placeholder="Tu Nombre de Usuario"
         formControlName="usuario"
-        [class.is-invalid]="
-          nuevoRegistroUsuario.controls['usuario'].dirty &&
-          nuevoRegistroUsuario.controls['usuario'].invalid
-        "
       />
-
-      @if (nuevoRegistroUsuario.controls['usuario'].invalid &&
-      nuevoRegistroUsuario.controls['usuario'].touched) {
-      <div class="invalid-feedback">
-        <div>Ingrese un nombre de usuario válido (5-20 caracteres)</div>
-      </div>
-      }
     </div>
+
     <div class="col-sm-6">
       <label for="password" class="form-label">Contraseña</label>
-
       <input
         type="password"
         class="form-control"
@@ -84,22 +49,11 @@
         autocomplete="off"
         placeholder="Tu Contraseña"
         formControlName="password"
-        [class.is-invalid]="
-          nuevoRegistroUsuario.controls['password'].dirty &&
-          nuevoRegistroUsuario.controls['password'].invalid
-        "
       />
-
-      @if (nuevoRegistroUsuario.controls['password'].invalid &&
-      nuevoRegistroUsuario.controls['password'].touched) {
-      <div class="invalid-feedback">
-        <div>Ingrese una contraseña válida (8-20 caracteres)</div>
-      </div>
-      }
     </div>
+
     <div class="col-sm-6">
       <label for="telefono" class="form-label">Teléfono</label>
-
       <input
         type="text"
         class="form-control"
@@ -108,18 +62,42 @@
         autocomplete="off"
         placeholder="Tu Número de Teléfono"
         formControlName="telefono"
-        [class.is-invalid]="
-          nuevoRegistroUsuario.controls['telefono'].dirty &&
-          nuevoRegistroUsuario.controls['telefono'].invalid
-        "
       />
+    </div>
+    <div class="col-sm-6">
+      <label for="tipoUsuario" class="form-label">Tipo de Usuario</label>
+      <select
+        class="form-control"
+        name="tipoUsuario"
+        id="tipoUsuario"
+        formControlName="tipoUsuario"
+      >
+        <option value="">Selecciona un tipo de usuario</option>
+        <option value="Usuario Normal">Usuario Normal</option>
+        <option value="Anunciante">Anunciante</option>
+      </select>
+    </div>
 
-      @if (nuevoRegistroUsuario.controls['telefono'].invalid &&
-      nuevoRegistroUsuario.controls['telefono'].touched) {
-      <div class="invalid-feedback">
-        <div>Ingrese un número de teléfono válido (10 dígitos)</div>
-      </div>
-      }
+    <div class="col-12">
+      <label for="foto" class="form-label">Foto de Perfil</label>
+      <input
+        type="file"
+        class="form-control"
+        name="foto"
+        id="foto"
+        (change)="onFileSelected($event)"
+        accept="image/*"
+      />
+    </div>
+
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Registrar Usuario</button>
     </div>
   </div>
 </form>
+<app-share-popup
+  [mensaje]="infoMessage || ''"
+  [tipo]="'info'"
+  [mostrar]="!!infoMessage"
+  (cerrarEvent)="infoMessage = null"
+></app-share-popup>
