Arreglo de reportes v2

--- a/proyecto-gestion-cine/src/components/users/create-user.component/create-user.component.html
+++ b/proyecto-gestion-cine/src/components/users/create-user.component/create-user.component.html
@@ -72,7 +72,7 @@
         id="tipoUsuario"
         formControlName="tipoUsuario"
       >
-        <option value="">Selecciona un tipo de usuario</option>
+        <option value="" selected>Selecciona un tipo de usuario</option>
         <option value="Usuario Normal">Usuario Normal</option>
         <option value="Anunciante">Anunciante</option>
       </select>
