--- a/proyecto-gestion-cine/src/components/share/navbar.component/navbar.component.html
+++ b/proyecto-gestion-cine/src/components/share/navbar.component/navbar.component.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="nav-item ms-lg-3">
-          <a class="btn btn-outline-light btn-sm" routerLink="/login" routerLinkActive="active">
+          <a class="btn btn-outline-light btn-sm" routerLink="/register" routerLinkActive="active">
             Registrarse
           </a>
         </li>
