Arreglo de reportes v4

--- a/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/advertiser-profit-report.component/advertiser-profit-report.component.html
@@ -153,19 +153,9 @@
   </div>
   } }
 </div>
-@if(errorMessage){
-<app-share-popup
-  [mensaje]="errorMessage || ''"
-  [tipo]="'error'"
-  [mostrar]="!!errorMessage"
-  (cerrarEvent)="errorMessage = null"
-></app-share-popup>
-
-}@else if(infoMessage){
 <app-share-popup
   [mensaje]="infoMessage || ''"
-  [tipo]="'success'"
-  [mostrar]="!!infoMessage"
+  [tipo]="popupTipo"
+  [mostrar]="popupMostrar"
   (cerrarEvent)="infoMessage = null"
 ></app-share-popup>
-}
