--- a/proyecto-gestion-cine/src/components/reports/coment-room-report.component/coment-room-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/coment-room-report.component/coment-room-report.component.html
@@ -73,8 +73,8 @@
   </div>
 </div>
 <app-share-popup
-  [mensaje]="errorMessage || ''"
-  [tipo]="'error'"
-  [mostrar]="!!errorMessage"
-  (cerrarEvent)="errorMessage = null"
+  [mensaje]="infoMessage || ''"
+  [tipo]="popupTipo"
+  [mostrar]="popupMostrar"
+  (cerrarEvent)="infoMessage = null"
 ></app-share-popup>
