--- a/proyecto-gestion-cine/src/components/reports/most-commented-room-report.component/most-commented-room-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/most-commented-room-report.component/most-commented-room-report.component.html
@@ -85,8 +85,8 @@
   }
 </div>
 <app-share-popup
-  [mensaje]="errorMessage || ''"
-  [tipo]="'error'"
-  [mostrar]="!!errorMessage"
-  (cerrarEvent)="errorMessage = null"
+  [mensaje]="infoMessage || ''"
+  [tipo]="popupTipo"
+  [mostrar]="popupMostrar"
+  (cerrarEvent)="infoMessage = null"
 ></app-share-popup>
