--- a/proyecto-gestion-cine/src/components/reports/movie-shown-report.component/movie-shown-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/movie-shown-report.component/movie-shown-report.component.html
@@ -42,7 +42,7 @@
     </form>
   </div>
 
-  @if (peliculasProyectadas && peliculasProyectadas.length > 0) {
+  @if (report && report.length > 0) {
   <div class="section-card">
     <div class="section-header">
       <h2>
@@ -61,7 +61,7 @@
           </tr>
         </thead>
         <tbody>
-          @for (sala of peliculasProyectadas; track sala.idSala) {
+          @for (sala of report; track sala.idSala) {
           <tr>
             <td>{{ sala.idSala }}</td>
             <td class="fw-bold">{{ sala.nombreSala }}</td>
@@ -81,7 +81,7 @@
       </h2>
     </div>
 
-    @for (sala of peliculasProyectadas; track sala.idSala) {
+    @for (sala of report; track sala.idSala) {
     <div class="sala-block">
       <div class="sala-header">
         <h3 class="sala-title">
@@ -109,7 +109,7 @@
     </div>
     }
   </div>
-  } @else if (peliculasProyectadas && peliculasProyectadas.length === 0) {
+  } @else if (report && report.length === 0) {
   <div class="section-card">
     <div class="alert-error">
       <i class="bi bi-info-circle"></i>
