--- a/proyecto-gestion-cine/src/components/cinema/create-cine-form.component/create-cine-form.component.html
+++ b/proyecto-gestion-cine/src/components/cinema/create-cine-form.component/create-cine-form.component.html
@@ -45,15 +45,15 @@
       type="number"
       step="0.01"
       id="costo_ocultacion_anuncios"
-      formControlName="costoOcultacionAnuncios"
+      formControlName="costoOcultacionAnuncio"
       class="form-control"
-      [class.is-invalid]="cineForm.controls['costoOcultacionAnuncios'].invalid"
+      [class.is-invalid]="cineForm.controls['costoOcultacionAnuncio'].invalid"
     />
-    @if (cineForm.controls['costoOcultacionAnuncios'].invalid) {
+    @if (cineForm.controls['costoOcultacionAnuncio'].invalid) {
     <div class="invalid-feedback">
-      @if (cineForm.controls['costoOcultacionAnuncios'].errors?.['required']) {
+      @if (cineForm.controls['costoOcultacionAnuncio'].errors?.['required']) {
       <div>Este valor es obligatorio.</div>
-      } @if (cineForm.controls['costoOcultacionAnuncios'].errors?.['min']) {
+      } @if (cineForm.controls['costoOcultacionAnuncio'].errors?.['min']) {
       <div>No puede ser negativo.</div>
       }
     </div>
