--- a/proyecto-gestion-cine/src/components/sysadmin/update-cinema.component/update-cinema.component.html
+++ b/proyecto-gestion-cine/src/components/sysadmin/update-cinema.component/update-cinema.component.html
@@ -1,15 +1,21 @@
 @if (cine) {
 <div>
   <h2>Editar Cine</h2>
-  <form [formGroup]="cineForm" (ngSubmit)="actualizarCine()">
+  <form [formGroup]="cineForm">
+    <div>
+      <label>ID Cine:</label>
+      <input type="text" formControlName="idCine" readonly />
+    </div>
     <div>
       <label>Nombre:</label>
       <input type="text" formControlName="nombreCine" required />
       @if (cineForm.get('nombreCine')?.invalid && cineForm.get('nombreCine')?.touched) {
-      <div class="error">El nombre es requerido</div>
+      <div class="error">El nombre es requerido y debe tener entre 3 y 50 caracteres</div>
       }
     </div>
-    <button type="submit" [disabled]="cineForm.invalid">Actualizar Cine</button>
+    <button type="button" (click)="actualizarCine()" [disabled]="cineForm.invalid">
+      Actualizar Cine
+    </button>
   </form>
 </div>
 }
